Fix opening App Menu after Bookmarks Drag

After dragging a nested bookmarks folder to the bookmarks bar, you could not
open the App Menu.

During a Drag operation BookmarkBarView can call Cancel in several
circumstances. If a Cancel was received by MenuController before
OnDragCompleted. Then the internal call to Cancel would not properly teardown
the menu. With an active, but hidden, menu new menus, such as the AppMenu, could
not launch.

This change updates the logic of MenuController::OnDragCompleted to make sure
that teardown occurs.

TEST=MenuControllerTest.AsynchronousDragComplete, MenuControllerTest.AsynchronousCancelDuringDrag
BUG=656948

Review-Url: https://chromiumcodereview.appspot.com/2433933007
Cr-Commit-Position: refs/heads/master@{#426592}

Former-commit-id: 6f08e5ae5e67d68510072d6873366a06841064fe